added individual docker install readme files. replaced install file with the readme from docker on github